--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,154 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
+
+header {
+  position: relative;
+  display: block;
+  width: 100%;
+  background-color: white;
+  height: 70px;
+}
+
+header .logo {
+  position: absolute;
+  top: 50%;
+  left: 20%;
+  vertical-align: center;
+  transform: translate(-65%, -50%);
+  margin: auto;
+}
+
+nav {
+  position: relative;
+  top: 50%;
+  right: 15px;
+}
+nav ul {
+  position: absolute;
+  top: 50%;
+  right: 20%;
+  vertical-align: center;
+  transform: translate(60%, -50%);
+  margin: auto;
+}
+
+.homeContainer {
+	padding-bottom: 250px;
+	/*border-bottom-style: solid;*/
+	/*border-bottom-width: 1px;*/
+	margin-bottom: 40px;
+}
+.grayContainer{
+	background-color: gray;
+	height: 350px;
+	width: 100%;
+	position: absolute;
+	text-align: center;
+}
+
+.jumbo {
+	vertical-align: center;
+	top: 30%;
+	transform: translate(0, 30%);
+}
+
+.jumboTitle {
+	color: white;
+	font-size: 70px;
+}
+
+.jumboDesc {
+	color: white;
+}
+
+.card {
+	background-color: white;
+	width: 250px;
+	max-height: 300px;
+	height: 250px;
+	text-align: center;
+	border-radius: 0px;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+	margin: 15px;
+	display: inline-block;
+	padding-bottom: 40px;
+}
+
+.card .container {
+	padding: 2px;
+}
+
+.card p {
+	font-size: 12px
+}
+
+
+.cardImg {
+	height: 40px;
+	width: 60px;
+	margin-top: 20px;
+}
+
+.displayCard {
+	display: block;
+	padding-top: 5%;
+	margin-left: auto;
+	margin-right: auto;	
+	position: relative;
+	top:60%;
+	text-align: center;
+	padding-bottom: 70px;
+	transform: translate(0, 40%);
+}
+
+.commentSection {
+	/*display: block;*/
+	margin-top: 60px;
+	margin-left: 40px;
+	margin-right: 40px;
+	text-align: left;
+	margin-bottom: 40px
+}
+
+.commentHeader{
+	padding-bottom: 30px;
+}
+
+.commentBody {
+	/*display: inline-block;*/
+	/*flexWrap: wrap;*/
+	border-radius: 2px;
+	white-space: normal;
+	background-color: #f2e7df;
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.05);
+
+}
+
+.commentBody p {
+	position: relative;
+	display: inline-block;
+	margin: 10px;
+	top: 50%;
+	vertical-align: center;
+	transform: translate(0, 0);
+}
+
+
+.commentInfo {
+	display: flex;
+	justify-Content: space-between;
+	flexWrap: wrap;
+	padding-bottom: 20px;
+}
+.commentName {
+	/*float: left;*/
+	font-size: 12px;
+	font-weight: bold;
+	padding-left: 5px;
+}
+
+.commentEmail {
+	/*float: right;*/
+	font-size: 12px;
+}
